--- a/ao2.css
+++ b/ao2.css
@@ -4,35 +4,60 @@ body {
     padding: 0;
 }
 
-header {
-    background-color: #333;
-    color: #f0e9e9;
-    padding: 10px 0;
+header{
+    background-color:darkcyan;
+    padding: 10px;
     text-align: center;
 }
-
-nav ul {
+#menu ul {
+    
     list-style-type: none;
-    padding: 0;
+    text-align: center;
 }
-
-nav ul li {
-    display: inline;
-    margin-right: 90px;
-
+  
+#menu li {
+    
+    display: inline-block;
+    width: 200px;
+    height: 40px;
+    line-height: 40px;
+    
 }
-
-nav ul li a {
-
-    color: #f7f7f7;
-    text-decoration:none;
+#menu li a{
+    color: #0c0b0b;
+    font-size: 20px;
 }
-
-nav ul li a:hover {
-    color: #ec0a0a;
+.sub-menu li a{
+    background-color:cornflowerblue;
+    border-radius: 20px;
+    text-align: center;
+}
+  
+#menu ul li a {
     text-decoration: none;
+    color: #f1f1f;
+    display: block;
 }
-
+#menu ul li a:hover {
+    
+    background: #e4c9c9;
+    color: #0C0A0A;
+    border-radius: 20px;
+}
+#menu ul li > .sub-menu {
+    display: none;
+    position: absolute;
+}
+#menu li {
+    position: relative;
+}
+.sub-menu {
+    display: none;
+    position: absolute;
+}
+#menu ul li:hover .sub-menu {
+    display: block;
+}
 
 main {
     display: flex;
@@ -60,15 +85,20 @@ main {
     height: auto;
 }
 .sao{
-    color: yellow;
+    color: #ffb800;
     
+}
+.gia{
+    color:red;
+    font-size: 20px;"
 }
 
 .xemthem input{
     background-color: #fdfbfb;
     color: #040404;
-
+    font-size: 20px;
     margin: 5px;
+    border-radius: 10px;
 }
 .xemthem input:hover{
     background-color: #0c0b0b;
