--- a/csswebchinh.css
+++ b/csswebchinh.css
@@ -8,6 +8,7 @@ header{
     background-color:darkcyan;
     padding: 10px;
     text-align: center;
+    
 }
 #menu ul {
     
@@ -16,8 +17,7 @@ header{
 }
   
 #menu li {
-    
-    display: inline-block;
+    display:inline-block;
     width: 200px;
     height: 40px;
     line-height: 40px;
@@ -35,7 +35,6 @@ header{
   
 #menu ul li a {
     text-decoration: none;
-    color: #f1f1f;
     display: block;
 }
 #menu ul li a:hover {
@@ -96,7 +95,7 @@ main {
 }
 .gia{
     color:red;
-    font-size: 20px;"
+    font-size: 20px;
 }
 
 .xemthem input{
