--- a/ao1.1.css
+++ b/ao1.1.css
@@ -1,8 +1,10 @@
 header{
-    background-color:darkcyan;
-    padding: 10px;
+    background-color:rgb(247, 244, 244);
+    padding: 15px;
     text-align: center;
+    
 }
+
 #menu ul {
     
     list-style-type: none;
@@ -10,32 +12,31 @@ header{
 }
   
 #menu li {
-    
-    display: inline-block;
+    display:inline-block;
     width: 200px;
     height: 40px;
     line-height: 40px;
+    margin: 10px;
     
 }
 #menu li a{
-    color: #0c0b0b;
-    font-size: 20px;
+    color: #000000;
+    font-size: 30px;
 }
 .sub-menu li a{
-    background-color:cornflowerblue;
-    border-radius: 20px;
+    background-color:rgb(172, 189, 192);
+    border-radius: 30px;
     text-align: center;
 }
   
 #menu ul li a {
     text-decoration: none;
-    color: #f1f1f;
     display: block;
 }
 #menu ul li a:hover {
     
-    background: #e4c9c9;
-    color: #0C0A0A;
+    background: #1bdfdf;
+    color: #000000;
     border-radius: 20px;
 }
 #menu ul li > .sub-menu {
@@ -52,6 +53,7 @@ header{
 #menu ul li:hover .sub-menu {
     display: block;
 }
+
 main {
     display: flex;
     flex-wrap: wrap;
