--- a/csswebchinh.css
+++ b/csswebchinh.css
@@ -5,11 +5,12 @@ body {
 }
 
 header{
-    background-color:darkcyan;
-    padding: 10px;
+    background-color:rgb(247, 244, 244);
+    padding: 15px;
     text-align: center;
     
 }
+
 #menu ul {
     
     list-style-type: none;
@@ -21,15 +22,16 @@ header{
     width: 200px;
     height: 40px;
     line-height: 40px;
+    margin: 10px;
     
 }
 #menu li a{
-    color: #0c0b0b;
-    font-size: 20px;
+    color: #000000;
+    font-size: 30px;
 }
 .sub-menu li a{
-    background-color:cornflowerblue;
-    border-radius: 20px;
+    background-color:rgb(172, 189, 192);
+    border-radius: 30px;
     text-align: center;
 }
   
@@ -39,8 +41,8 @@ header{
 }
 #menu ul li a:hover {
     
-    background: #e4c9c9;
-    color: #0C0A0A;
+    background: #1bdfdf;
+    color: #000000;
     border-radius: 20px;
 }
 #menu ul li > .sub-menu {
